- include ip address in debug logging.
- mount using address for DNS round robin host names.
- reset negative status on cache prune.
- remove master_mutex_unlock() leftover.
- fix sanity checks for brackets in server name.
- fix lsb service name in init script.
- fix map source check in file lookup.
- fix simple bind without SASL support.
- fix sasl bind host name selection.
- add nobind option.

03/09/2009 autofs-5.0.5
-----------------------
- fix dumb libxml2 check
- fix nested submount expire deadlock.
- fix negative caching for non-existent map keys.
- use CLOEXEC flag.
- fix select(2) fd limit.
- make hash table scale to thousands of entries (Paul Wankadia,
  Valerie Aurora Henson).
- clear the quoted flag after each character from program map input.
- use CLOEXEC flag for setmntent also.
- fix hosts map use after free.
- fix uri list locking (again).
- check for stale SASL credentials upon connect fail.
- add "forcestart" and "forcerestart" init script options to allow
  use of 5.0.3 strartup behavior if required.
- always read entire file map into cache to speed lookups.
- make MAX_ERR_BUF and PARSE_MAX_BUF use easier to audit.
- make some easy alloca replacements (Valerie Aurora Henson).
- update to configure libtirpc if present.
- update to provide ipv6 name and address support.
- update to provide ipv6 address parsing.
- easy alloca replacements fix.
- add check for alternate libxml2 library for libxml2 tsd workaround.
- add check for alternate libtirpc library for libtirpc tsd workaround.
- cleanup configure defines for libtirpc.
- add WITH_LIBTIRPC to -V status report.
- add nfs mount protocol default configuration option.
- fix bad token declaration in master map parser.
- fix return start status on fail.
- fix double free in expire_proc().
- another easy alloca replacements fix.
- add LSB init script parameter block.
- fix file map lookup when reading included or nsswitch sources.
- use misc device ioctl interface by default, if available.